SSC-1906 Quote request component display mobile - correction spacing in a better way (take care of error message)

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-form.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-form.less
@@ -56,7 +56,7 @@
 
     .countrycode {
         position: relative;
-        height:58px;
+
         .flag-container {
             cursor: pointer;
         }
@@ -66,8 +66,13 @@
         }
 
         .chosen-container {
+            display: none;
             position: static;
             z-index: 1;
+
+            &.chosen-with-drop {
+                display: inline-block;
+            }
         }
 
         .chosen-single {
